k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: berget-website
  namespace: berget-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: berget-website
  template:
    metadata:
      labels:
        app: berget-website
    spec:
      containers:
        - name: berget-website
          image: ghcr.io/berget-ai/landing-page
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
