k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: berget-website
  namespace: berget-web
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: berget-website
